--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
         regdUsers[i].password == enterPassword
       ) {
         alert("login success");
-        window.location.href = "index.html";
+        window.location.href = "index1.html";
         break;
       } else {
         console.log("login failed");
