--- a/index1.html
+++ b/index1.html
@@ -308,9 +308,12 @@ p{
 }
 .s1{
     border:none;
-     width:60%
+      width: 60%;
 
 }
+.search{
+    margin-top: 15px;
+  }
 
 
 
@@ -422,6 +425,7 @@ p{
         <P>ACCESSORIES</P>
         <P>MEN</P>
         <P>SALE</P>
+        <i class="fa-solid fa-magnifying-glass search"></i>
     </div>
 
 
